2006-01-16  Roman Kennke  <kennke@aicas.com>

	* native/target/Makefile.am: Include new targets.
	* native/target/Linux/Makefile.am: Include new memory layer.
	* native/target/MinGW/Makefile.am: New file. Includes MinGW in dist.
	* native/target/RTEMS/Makefile.am: New file. Includes RTEMS in dist.
	* native/target/SunOS/Makefile.am: New file. Includes SunOS in dist.
	* native/target/embOS/Makefile.am: New file. Includes embOS in dist.
	* native/target/generic/Makefile.am: Include new memory and math
	layer.
	* native/target/posix/Makefile.am: New file. Includes posix in dist.

2006-01-16  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Fixes bug #22884
	* gnu/regexp/RE.java(initialize): Parse embedded flags.
	* gnu/regexp/RESyntax.java(RE_EMBEDDED_FLAGS): New syntax bit.

2006-01-16  Roman Kennke  <kennke@aicas.com>

	* native/target/generic/target_generic_network.c: Fixed typo.
	* native/target/generic/target_generic_network.h: Fixed typo.

2006-01-16  Nicolas Geoffray  <nicolas.geoffray@menlina.com>

	* doc/vmintegration.texinfo: Updated subsection of the
	java.lang.InstrumentationImpl documentation.

2006-01-16  Roman Kennke  <kennke@aicas.com>

	* native/target/RTEMS/target_native.h,
	* native/target/RTEMS/target_native_file.h,
	* native/target/RTEMS/target_native_io.h,
	* native/target/RTEMS/target_native_math.h,
	* native/target/RTEMS/target_native_memory.h,
	* native/target/RTEMS/target_native_misc.h,
	* native/target/RTEMS/target_native_network.h:
	New files. Implement the target native layer for the RTEMS platform.

2006-01-16  Roman Kennke  <kennke@aicas.com>

	* native/target/SunOS/target_native.h,
	* native/target/SunOS/target_native_file.h,
	* native/target/SunOS/target_native_io.h,
	* native/target/SunOS/target_native_math.h,
	* native/target/SunOS/target_native_memory.h,
	* native/target/SunOS/target_native_misc.h,
	* native/target/SunOS/target_native_network.h:
	New files. Implement the target native layer for the SunOS platform.
