@@ -1,5 +1,27 @@
 ## Input file for automake to generate the Makefile.in used by configure
 
-SUBDIRS = Linux generic embOS MinGW posix RTEMS SunOS
+TARGET = Linux
+# FIXME: How do I set these variables in configure?
+#if TARGET_LINUX
+#  TARGET = Linux
+#endif
 
+#if TARGET_SUNOS
+#  TARGET = SunOS
+#endif
+
+#if TARGET_RTEMS
+#  TARGET = RTEMS
+#endif
+
+#if TARGET_MINGW
+#  TARGET = MinGW
+#endif
+
+#if TARGET_EMBOS
+#  TARGET = embOS
+#endif
+
+SUBDIRS = $(TARGET) generic
+DIST_SUBDIRS = Linux SunOS RTEMS MinGW embOS posix generic 
 EXTRA_DIST = readme.txt
