@@ -1,17 +1,17 @@
 ## Input file for automake to generate the Makefile.in used by configure
 
 EXTRA_DIST = \
-target_native.h \
-target_native.c \
-target_native_file.h \
-target_native_file.c \
-target_native_io.h \
-target_native_io.c \
-target_native_math.h \
-target_native_math.c \
-target_native_memory.h \
-target_native_memory.c \
-target_native_misc.h \
-target_native_misc.c \
-target_native_network.h \
-target_native_network.c
+target_posix.h \
+target_posix.c \
+target_posix_file.h \
+target_posix_file.c \
+target_posix_io.h \
+target_posix_io.c \
+target_posix_math.h \
+target_posix_math.c \
+target_posix_memory.h \
+target_posix_memory.c \
+target_posix_misc.h \
+target_posix_misc.c \
+target_posix_network.h \
+target_posix_network.c
