@@ -1,5 +1,11 @@
 2006-01-16  Roman Kennke  <kennke@aicas.com>
 
+	* native/target/Makefile.am: Adjusted SUBDIRS and DIST_SUBDIRS
+	to include the new targets.
+	* native/target/posix/Makefile.am: Fixed filenames.
+
+2006-01-16  Roman Kennke  <kennke@aicas.com>
+
 	* native/target/Makefile.am: Include new targets.
 	* native/target/Linux/Makefile.am: Include new memory layer.
 	* native/target/MinGW/Makefile.am: New file. Includes MinGW in dist.
